Add Team parameter to getPotentiallyValidMoves